# Rust_vcs_project

./: .gitignore  .vimspector.json  Cargo.toml  README  Session.vim
src/: commands.rs  commit.rs  init.rs  jump.rs  log.rs  main  main.rs  merge.rs  new_branch.rs  status.rs  util.rs
test/: second
test/dir/: third.txt
test/dir_with_code/: code_in_dir.txt
