[package]
name = "vcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10.5"
hex-literal = "0.3.4"
hex = "0.4"
compress = "0.2.1"
flate2 = "1.0"
fs_extra = "1.2.0"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
